<resources>
    <string name="app_name">Employee Admin</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="Roles">roles</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="Insert">Insert</string>
    <string name="ok">Ok</string>
    <string name="error_firstname3">First name must be greater than 3</string>
    <string name="error_enterlastname">Enter Last name</string>
    <string name="error_last3">Last name  must be greater than 3</string>
    <string name="error_email">Enter your email</string>
    <string name="error_emailvalid">Enter Valid Email Address</string>
    <string name="error_pwd">Enter password</string>
    <string name="error_pwd3">password must be greater than 3</string>
    <string name="error_confimpwd">Confirm password not matched</string>
    <string name="error_selectdesg">select employee designation</string>
    <string name="error_selectrole">Select role</string>

    <string-array name="empdesg">
        <item>--None Selected--</item>
        <item>Accounting</item>
        <item>Sales</item>
        <item>Plant</item>
        <item>Shipping</item>
        <item>Quality Control</item>


    </string-array>
</resources>