<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="item"
            type="com.muhammadnaeem.kotlinsqlite_demo.model.EmployeeModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SecondFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <EditText
                    android:id="@+id/edt_firstname"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sp"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:textColorHint="@color/black"
                    android:imeOptions="actionNext"
                    android:text='@{item.firstname ?? ""}'
                    android:inputType="textCapWords"
                    android:hint="@string/firstname"
                    android:autofillHints="@string/firstname" />


                <EditText
                    android:id="@+id/edt_lastname"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sp"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:text='@{item.lastnmae ?? ""}'
                    android:layout_marginLeft="@dimen/_5dp"
                    android:textColorHint="@color/black"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:hint="@string/lastname"
                    android:autofillHints="@string/lastname" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:orientation="horizontal"
                >
                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sp"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:text='@{item.email ?? ""}'
                    android:textColorHint="@color/black"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:autofillHints="@string/email" />


                <EditText
                    android:id="@+id/edt_employcode"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sp"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:text='@{item.emp_code ?? ""}'
                    android:textColorHint="@color/black"
                    android:imeOptions="actionNext"
                    android:editable="false"
                    android:inputType="textCapWords"
                    android:focusable="false"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:orientation="horizontal"
                >
                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sp"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:textColorHint="@color/black"
                    android:imeOptions="actionNext"
                    android:text='@{item.password ?? ""}'
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:autofillHints="@string/password" />


                <EditText
                    android:id="@+id/edt_confirmpassword"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sp"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:textColorHint="@color/black"
                    android:imeOptions="actionNext"
                    android:text='@{item.password ?? ""}'
                    android:inputType="textPassword"
                    android:hint="@string/confirmpassword"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:orientation="horizontal"
                >
                <Spinner
                    android:id="@+id/sp_desg"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:entries="@array/empdesg"
                    android:layout_height="wrap_content"
                    />
                <Button
                    android:id="@+id/btn_roles"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Roles"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:entries="@array/empdesg"
                    android:text="@string/cancel"
                    android:background="@color/blue"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    />
                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@color/green"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="@string/update"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>